test/param/loop/paramForLoopWrongCountLow.good
paramForLoopWrongCountLow.chpl:1: error: for negative count, last index must be present
