test/param/loop/paramForLoopWrongCountLow.chpl
for param i in 1..#-2 {
    writeln(i);
}